--- a/packages/components/s-specs-editor-component/src/css/components/metas.css
+++ b/packages/components/s-specs-editor-component/src/css/components/metas.css
@@ -1,12 +1,15 @@
 .s-specs-editor_metas {
     position: sticky;
-    z-index: 10;
+    z-index: 500;
     top: 0;
     left: 0;
     width: 100%;
-    margin-block-end: sugar.margin(30);
     border-bottom: 1px solid sugar.color(main, border);
     background: sugar.color(main, background);
+
+    &:has(&-source) {
+        border-bottom: none;
+    }
 
     &-heading {
         display: flex;
@@ -48,11 +51,10 @@
     &-source {
         padding-inline: var(--s-specs-editor-padding-inline);
         padding-block: sugar.padding(20);
-        background: sugar.color(complementary);
+        background: sugar.color(accent, --alpha 0.2);
         @sugar.transition;
 
         ._text {
-            color: sugar.color(complementary, foreground);
         }
         ._link {
             font-weight: bold;
