--- a/packages/components/s-specs-editor-component/src/css/components/prop.css
+++ b/packages/components/s-specs-editor-component/src/css/components/prop.css
@@ -8,4 +8,8 @@
     &:has(> div) {
         padding-block: var(--s-specs-editor-padding-block);
     }
+
+    .s-specs-editor_child & {
+        /* padding: 0; */
+    }
 }
