--- a/packages/@examples/01-basic/src/views/layouts/main.twig
+++ b/packages/@examples/01-basic/src/views/layouts/main.twig
@@ -27,6 +27,6 @@
 
     {% include 'layouts/footer/footer.twig' %}
 
-    <s-carpenter id="carpenter" auto-init escape features='{"save":true,"delete":true}'></s-carpenter>
+    <s-carpenter id="carpenter" auto-init escape features='{"save":true,"delete":true,"insert":true}'></s-carpenter>
 
 {% endblock %}
