--- a/packages/@examples/01-basic/src/views/sections/separator/separator.css
+++ b/packages/@examples/01-basic/src/views/sections/separator/separator.css
@@ -1,6 +1,7 @@
 .section-separator {
     position: relative;
     width: 100%;
+    margin-bottom: -50px;
 
     @sugar.lod (3) {
         transform: skewY(1deg);
