--- a/packages/components/s-specs-editor-component/src/css/widgets/_imports.css
+++ b/packages/components/s-specs-editor-component/src/css/widgets/_imports.css
@@ -8,6 +8,7 @@
 @import './number-widget.css';
 @import './select-widget.css';
 @import './spaces-widget.css';
+@import './string-widget.css';
 @import './switch-widget.css';
 @import './text-widget.css';
 @import './wysiwyg-widget.css';
