--- a/packages/@examples/01-basic/src/views/sections/card/card.twig
+++ b/packages/@examples/01-basic/src/views/sections/card/card.twig
@@ -1,4 +1,4 @@
-<section class="section-card {{ __spacesClasses(spaces, frontspec) }}">
+<section {{ __id(id) }} class="section-card {{ __spacesClasses(spaces, frontspec) }}">
     <div class="s-container:wide">
         <div class="s-layout">
             {% if cardOne %}
