--- a/packages/@examples/01-basic/src/views/sections/slider/slider.twig
+++ b/packages/@examples/01-basic/src/views/sections/slider/slider.twig
@@ -1,4 +1,4 @@
-<section id="{{ id }}" s-specs="views.sections.slider" class="section-slider {{ __spacesClasses(spaces, frontspec) }}">
+<section {{ __id(id) }} s-specs="views.sections.slider" class="section-slider {{ __spacesClasses(spaces, frontspec) }}">
     {{ __specsDataTemplate(_context)|raw }}
     
     <div class="s-container">
