--- a/packages/tools/sugar/src/views/twig/sugar/components/slider/slider.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/components/slider/slider.twig
@@ -1,4 +1,4 @@
-<div id="{{ id }}" s-specs="views.components.slider"
+<div id="{{ id.value }}" s-specs="views.components.slider"
     class="{{ attributes.class }} {{ container ? 's-container:' ~ container : '' }} {{ __marginClasses(margin, frontspec) }} {{ __paddingClasses(padding, frontspec) }}"
     {{ __attrs(attributes, ['class'])|raw }}>
     
