--- a/packages/@examples/01-basic/src/views/sections/sandbox/sandbox.twig
+++ b/packages/@examples/01-basic/src/views/sections/sandbox/sandbox.twig
@@ -1,4 +1,4 @@
-<section class="section-sandbox" s-specs="views.sections.sandbox">
+<section {{ __id(id) }} class="section-sandbox" s-specs="views.sections.sandbox">
     {{ __specsDataTemplate(_context)|raw }}   
 
     <div class="_type">
