--- a/packages/tools/sugar/src/views/twig/sugar/components/card/card.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/components/card/card.twig
@@ -1,4 +1,4 @@
-<div id="{{ id }}" s-specs="views.components.card"
+<div id="{{ id.value }}" s-specs="views.components.card"
     class="s-card {{ attributes.class }} {{ direction.value ? 's-card--' ~ direction.value : '' }} {{ __spacesClasses(spaces, frontspec) }}" {{ __attrs(attributes, ['class'])|raw }}
 >
 {{ __specsDataTemplate(_context)|raw }}
