--- a/packages/@examples/01-basic/src/views/sections/heading/heading.twig
+++ b/packages/@examples/01-basic/src/views/sections/heading/heading.twig
@@ -1,4 +1,4 @@
-<section {{ __id(id) }} s-specs="views.sections.heading" class="section-heading {{ __spacesClasses(spaces, frontspec) }}">
+<section {{ __id(id) }} s-specs="views.sections.heading.heading" class="section-heading {{ __spacesClasses(spaces, frontspec) }}">
     {{ __specsDataTemplate(_context)|raw }}
 
     <div class="_bkg">
