--- a/packages/app/s-carpenter/src/css/components/editor.css
+++ b/packages/app/s-carpenter/src/css/components/editor.css
@@ -40,12 +40,15 @@
         height: 100%;
         z-index: 999;
         pointer-events: none;
-        border: 0 solid sugar.color(error);
+        border: 0 solid transparent;
         @sugar.transition fast;
     }
 
     &:has(s-specs-editor.error):after {
         border: 4px solid sugar.color(error);
+    }
+    &:has(s-specs-editor.unsaved):after {
+        border: 4px solid sugar.color(accent);
     }
 
     ._loader {
