--- a/packages/app/s-carpenter/src/css/s-carpenter-app-website-ui.css
+++ b/packages/app/s-carpenter/src/css/s-carpenter-app-website-ui.css
@@ -5,8 +5,23 @@
     @sugar.theme.apply ($variant: light);
 }
 
-[s-specs]:not(:has(> [uid])) {
+.s-carpenter-app_error {
+    display: block;
+    max-width: sugar.container.width();
+    background: sugar.color(error);
+    color: sugar.color(error, foreground);
+    padding: sugar.padding(30);
+    margin: 0 auto;
+    @sugar.border.radius;
+}
+
+[s-specs]:is(:not(:has(> [uid])), .unsaved) {
     position: relative;
+}
+
+[s-specs]:is(:not(:has(> [uid])), .unsaved) template[uid] {
+    display: block;
+    pointer-events: none;
 
     &:before {
         content: '';
@@ -16,19 +31,37 @@
         left: 0;
         width: 100%;
         height: 100%;
-        border: 4px solid sugar.color(error);
+        border: 0px solid transparent;
+        background: none;
+        @sugar.transition;
+        @sugar.border.radius;
     }
 
     &:after {
+        display: inline-block;
         content: 'This component does not have an "id" specified and will not be available in the carpenter editor...';
         position: absolute;
         z-index: 200;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background: sugar.color(error);
+        width: auto;
+        height: auto;
+        top: 0;
+        left: 0;
+        right: auto;
+        bottom: auto;
+        white-space: nowrap;
+        /* transform: translate(-50%, -50%); */
+        background: transparent;
         color: sugar.color(error, foreground);
         padding: sugar.padding(30);
         @sugar.border.radius;
+    }
+}
+[s-specs].unsaved template[uid] {
+    &:before {
+        border: 4px solid sugar.color(accent);
+    }
+    &:after {
+        background: sugar.color(accent);
+        content: 'Unsaved changes';
     }
 }
